version/0.7/_sources/api/ansys.dpf.core.operators.result.rst.txt
ansys.dpf.core.operators.result package
=======================================

Submodules
----------

.. toctree::
   :maxdepth: 4

   ansys.dpf.core.operators.result.acceleration
   ansys.dpf.core.operators.result.acceleration_X
   ansys.dpf.core.operators.result.acceleration_Y
   ansys.dpf.core.operators.result.acceleration_Z
   ansys.dpf.core.operators.result.accu_eqv_creep_strain
   ansys.dpf.core.operators.result.accu_eqv_plastic_strain
   ansys.dpf.core.operators.result.add_rigid_body_motion
   ansys.dpf.core.operators.result.add_rigid_body_motion_fc
   ansys.dpf.core.operators.result.artificial_hourglass_energy
   ansys.dpf.core.operators.result.beam_axial_force
   ansys.dpf.core.operators.result.beam_axial_plastic_strain
   ansys.dpf.core.operators.result.beam_axial_stress
   ansys.dpf.core.operators.result.beam_axial_total_strain
   ansys.dpf.core.operators.result.beam_rs_shear_stress
   ansys.dpf.core.operators.result.beam_s_bending_moment
   ansys.dpf.core.operators.result.beam_s_shear_force
   ansys.dpf.core.operators.result.beam_t_bending_moment
   ansys.dpf.core.operators.result.beam_t_shear_force
   ansys.dpf.core.operators.result.beam_torsional_moment
   ansys.dpf.core.operators.result.beam_tr_shear_stress
   ansys.dpf.core.operators.result.cms_dst_table_provider
   ansys.dpf.core.operators.result.cms_matrices_provider
   ansys.dpf.core.operators.result.cms_subfile_info_provider
   ansys.dpf.core.operators.result.co_energy
   ansys.dpf.core.operators.result.compute_invariant_terms_motion
   ansys.dpf.core.operators.result.compute_invariant_terms_rbd
   ansys.dpf.core.operators.result.compute_stress
   ansys.dpf.core.operators.result.compute_stress_1
   ansys.dpf.core.operators.result.compute_stress_2
   ansys.dpf.core.operators.result.compute_stress_3
   ansys.dpf.core.operators.result.compute_stress_X
   ansys.dpf.core.operators.result.compute_stress_XY
   ansys.dpf.core.operators.result.compute_stress_XZ
   ansys.dpf.core.operators.result.compute_stress_Y
   ansys.dpf.core.operators.result.compute_stress_YZ
   ansys.dpf.core.operators.result.compute_stress_Z
   ansys.dpf.core.operators.result.compute_stress_von_mises
   ansys.dpf.core.operators.result.compute_total_strain
   ansys.dpf.core.operators.result.compute_total_strain_1
   ansys.dpf.core.operators.result.compute_total_strain_2
   ansys.dpf.core.operators.result.compute_total_strain_3
   ansys.dpf.core.operators.result.compute_total_strain_X
   ansys.dpf.core.operators.result.compute_total_strain_XY
   ansys.dpf.core.operators.result.compute_total_strain_XZ
   ansys.dpf.core.operators.result.compute_total_strain_Y
   ansys.dpf.core.operators.result.compute_total_strain_YZ
   ansys.dpf.core.operators.result.compute_total_strain_Z
   ansys.dpf.core.operators.result.contact_fluid_penetration_pressure
   ansys.dpf.core.operators.result.contact_friction_stress
   ansys.dpf.core.operators.result.contact_gap_distance
   ansys.dpf.core.operators.result.contact_penetration
   ansys.dpf.core.operators.result.contact_pressure
   ansys.dpf.core.operators.result.contact_sliding_distance
   ansys.dpf.core.operators.result.contact_status
   ansys.dpf.core.operators.result.contact_surface_heat_flux
   ansys.dpf.core.operators.result.contact_total_stress
   ansys.dpf.core.operators.result.coordinate_system
   ansys.dpf.core.operators.result.coordinates
   ansys.dpf.core.operators.result.creep_strain_energy_density
   ansys.dpf.core.operators.result.current_density
   ansys.dpf.core.operators.result.custom
   ansys.dpf.core.operators.result.cyclic_analytic_seqv_max
   ansys.dpf.core.operators.result.cyclic_analytic_usum_max
   ansys.dpf.core.operators.result.cyclic_expanded_acceleration
   ansys.dpf.core.operators.result.cyclic_expanded_displacement
   ansys.dpf.core.operators.result.cyclic_expanded_el_strain
   ansys.dpf.core.operators.result.cyclic_expanded_enf
   ansys.dpf.core.operators.result.cyclic_expanded_heat_flux
   ansys.dpf.core.operators.result.cyclic_expanded_stress
   ansys.dpf.core.operators.result.cyclic_expanded_temperature
   ansys.dpf.core.operators.result.cyclic_expanded_velocity
   ansys.dpf.core.operators.result.cyclic_expansion
   ansys.dpf.core.operators.result.cyclic_kinetic_energy
   ansys.dpf.core.operators.result.cyclic_strain_energy
   ansys.dpf.core.operators.result.cyclic_volume
   ansys.dpf.core.operators.result.displacement
   ansys.dpf.core.operators.result.displacement_X
   ansys.dpf.core.operators.result.displacement_Y
   ansys.dpf.core.operators.result.displacement_Z
   ansys.dpf.core.operators.result.elastic_strain
   ansys.dpf.core.operators.result.elastic_strain_X
   ansys.dpf.core.operators.result.elastic_strain_XY
   ansys.dpf.core.operators.result.elastic_strain_XZ
   ansys.dpf.core.operators.result.elastic_strain_Y
   ansys.dpf.core.operators.result.elastic_strain_YZ
   ansys.dpf.core.operators.result.elastic_strain_Z
   ansys.dpf.core.operators.result.elastic_strain_energy_density
   ansys.dpf.core.operators.result.elastic_strain_eqv
   ansys.dpf.core.operators.result.elastic_strain_principal_1
   ansys.dpf.core.operators.result.elastic_strain_principal_2
   ansys.dpf.core.operators.result.elastic_strain_principal_3
   ansys.dpf.core.operators.result.elastic_strain_rotation_by_euler_nodes
   ansys.dpf.core.operators.result.electric_field
   ansys.dpf.core.operators.result.electric_flux_density
   ansys.dpf.core.operators.result.electric_potential
   ansys.dpf.core.operators.result.element_centroids
   ansys.dpf.core.operators.result.element_nodal_forces
   ansys.dpf.core.operators.result.element_orientations
   ansys.dpf.core.operators.result.elemental_heat_generation
   ansys.dpf.core.operators.result.elemental_mass
   ansys.dpf.core.operators.result.elemental_volume
   ansys.dpf.core.operators.result.enf_rotation_by_euler_nodes
   ansys.dpf.core.operators.result.equivalent_mass
   ansys.dpf.core.operators.result.equivalent_radiated_power
   ansys.dpf.core.operators.result.eqv_stress_parameter
   ansys.dpf.core.operators.result.erp_accumulate_results
   ansys.dpf.core.operators.result.erp_radiation_efficiency
   ansys.dpf.core.operators.result.euler_load_buckling
   ansys.dpf.core.operators.result.euler_nodes
   ansys.dpf.core.operators.result.global_added_mass
   ansys.dpf.core.operators.result.global_added_mass_pct
   ansys.dpf.core.operators.result.global_center_mass
   ansys.dpf.core.operators.result.global_energy_ratio
   ansys.dpf.core.operators.result.global_energy_ratio_wo_eroded
   ansys.dpf.core.operators.result.global_eroded_hourglass_energy
   ansys.dpf.core.operators.result.global_eroded_internal_energy
   ansys.dpf.core.operators.result.global_eroded_kinetic_energy
   ansys.dpf.core.operators.result.global_external_work
   ansys.dpf.core.operators.result.global_hourglass_energy
   ansys.dpf.core.operators.result.global_internal_energy
   ansys.dpf.core.operators.result.global_joint_internal_energy
   ansys.dpf.core.operators.result.global_kinetic_energy
   ansys.dpf.core.operators.result.global_rigid_body_stopper_energy
   ansys.dpf.core.operators.result.global_sliding_interface_energy
   ansys.dpf.core.operators.result.global_spring_damper_energy
   ansys.dpf.core.operators.result.global_system_damping_energy
   ansys.dpf.core.operators.result.global_time_step
   ansys.dpf.core.operators.result.global_to_nodal
   ansys.dpf.core.operators.result.global_total_energy
   ansys.dpf.core.operators.result.global_total_mass
   ansys.dpf.core.operators.result.global_velocity
   ansys.dpf.core.operators.result.heat_flux
   ansys.dpf.core.operators.result.heat_flux_X
   ansys.dpf.core.operators.result.heat_flux_Y
   ansys.dpf.core.operators.result.heat_flux_Z
   ansys.dpf.core.operators.result.hydrostatic_pressure
   ansys.dpf.core.operators.result.incremental_energy
   ansys.dpf.core.operators.result.initial_coordinates
   ansys.dpf.core.operators.result.interface_contact_area
   ansys.dpf.core.operators.result.interface_contact_force
   ansys.dpf.core.operators.result.interface_contact_mass
   ansys.dpf.core.operators.result.interface_contact_moment
   ansys.dpf.core.operators.result.interface_resultant_contact_force
   ansys.dpf.core.operators.result.joint_force_reaction
   ansys.dpf.core.operators.result.joint_moment_reaction
   ansys.dpf.core.operators.result.joint_relative_acceleration
   ansys.dpf.core.operators.result.joint_relative_angular_acceleration
   ansys.dpf.core.operators.result.joint_relative_angular_velocity
   ansys.dpf.core.operators.result.joint_relative_displacement
   ansys.dpf.core.operators.result.joint_relative_rotation
   ansys.dpf.core.operators.result.joint_relative_velocity
   ansys.dpf.core.operators.result.kinetic_energy
   ansys.dpf.core.operators.result.mapdl_material_properties
   ansys.dpf.core.operators.result.mapdl_section
   ansys.dpf.core.operators.result.material_property_of_element
   ansys.dpf.core.operators.result.members_in_bending_not_certified
   ansys.dpf.core.operators.result.members_in_compression_not_certified
   ansys.dpf.core.operators.result.members_in_linear_compression_bending_not_certified
   ansys.dpf.core.operators.result.migrate_to_h5dpf
   ansys.dpf.core.operators.result.modal_basis
   ansys.dpf.core.operators.result.nmisc
   ansys.dpf.core.operators.result.nodal_force
   ansys.dpf.core.operators.result.nodal_moment
   ansys.dpf.core.operators.result.nodal_rotation_by_euler_nodes
   ansys.dpf.core.operators.result.nodal_to_global
   ansys.dpf.core.operators.result.normal_contact_force
   ansys.dpf.core.operators.result.normal_contact_moment
   ansys.dpf.core.operators.result.num_surface_status_changes
   ansys.dpf.core.operators.result.part_added_mass
   ansys.dpf.core.operators.result.part_eroded_internal_energy
   ansys.dpf.core.operators.result.part_eroded_kinetic_energy
   ansys.dpf.core.operators.result.part_hourglass_energy
   ansys.dpf.core.operators.result.part_internal_energy
   ansys.dpf.core.operators.result.part_kinetic_energy
   ansys.dpf.core.operators.result.part_momentum
   ansys.dpf.core.operators.result.part_rigid_body_velocity
   ansys.dpf.core.operators.result.plastic_state_variable
   ansys.dpf.core.operators.result.plastic_strain
   ansys.dpf.core.operators.result.plastic_strain_X
   ansys.dpf.core.operators.result.plastic_strain_XY
   ansys.dpf.core.operators.result.plastic_strain_XZ
   ansys.dpf.core.operators.result.plastic_strain_Y
   ansys.dpf.core.operators.result.plastic_strain_YZ
   ansys.dpf.core.operators.result.plastic_strain_Z
   ansys.dpf.core.operators.result.plastic_strain_energy_density
   ansys.dpf.core.operators.result.plastic_strain_eqv
   ansys.dpf.core.operators.result.plastic_strain_principal_1
   ansys.dpf.core.operators.result.plastic_strain_principal_2
   ansys.dpf.core.operators.result.plastic_strain_principal_3
   ansys.dpf.core.operators.result.plastic_strain_rotation_by_euler_nodes
   ansys.dpf.core.operators.result.poynting_vector
   ansys.dpf.core.operators.result.poynting_vector_surface
   ansys.dpf.core.operators.result.pres_to_field
   ansys.dpf.core.operators.result.pressure
   ansys.dpf.core.operators.result.prns_to_field
   ansys.dpf.core.operators.result.raw_displacement
   ansys.dpf.core.operators.result.raw_reaction_force
   ansys.dpf.core.operators.result.reaction_force
   ansys.dpf.core.operators.result.recombine_harmonic_indeces_cyclic
   ansys.dpf.core.operators.result.remove_rigid_body_motion
   ansys.dpf.core.operators.result.remove_rigid_body_motion_fc
   ansys.dpf.core.operators.result.result_provider
   ansys.dpf.core.operators.result.rigid_transformation
   ansys.dpf.core.operators.result.rom_data_provider
   ansys.dpf.core.operators.result.run
   ansys.dpf.core.operators.result.smisc
   ansys.dpf.core.operators.result.stiffness_matrix_energy
   ansys.dpf.core.operators.result.strain_eqv_as_mechanical
   ansys.dpf.core.operators.result.stress
   ansys.dpf.core.operators.result.stress_X
   ansys.dpf.core.operators.result.stress_XY
   ansys.dpf.core.operators.result.stress_XZ
   ansys.dpf.core.operators.result.stress_Y
   ansys.dpf.core.operators.result.stress_YZ
   ansys.dpf.core.operators.result.stress_Z
   ansys.dpf.core.operators.result.stress_eqv_as_mechanical
   ansys.dpf.core.operators.result.stress_principal_1
   ansys.dpf.core.operators.result.stress_principal_2
   ansys.dpf.core.operators.result.stress_principal_3
   ansys.dpf.core.operators.result.stress_ratio
   ansys.dpf.core.operators.result.stress_rotation_by_euler_nodes
   ansys.dpf.core.operators.result.stress_von_mises
   ansys.dpf.core.operators.result.structural_temperature
   ansys.dpf.core.operators.result.swelling_strains
   ansys.dpf.core.operators.result.tangential_contact_force
   ansys.dpf.core.operators.result.tangential_contact_moment
   ansys.dpf.core.operators.result.temperature
   ansys.dpf.core.operators.result.temperature_grad
   ansys.dpf.core.operators.result.thermal_dissipation_energy
   ansys.dpf.core.operators.result.thermal_strain
   ansys.dpf.core.operators.result.thermal_strain_X
   ansys.dpf.core.operators.result.thermal_strain_XY
   ansys.dpf.core.operators.result.thermal_strain_XZ
   ansys.dpf.core.operators.result.thermal_strain_Y
   ansys.dpf.core.operators.result.thermal_strain_YZ
   ansys.dpf.core.operators.result.thermal_strain_Z
   ansys.dpf.core.operators.result.thermal_strain_principal_1
   ansys.dpf.core.operators.result.thermal_strain_principal_2
   ansys.dpf.core.operators.result.thermal_strain_principal_3
   ansys.dpf.core.operators.result.thermal_strains_eqv
   ansys.dpf.core.operators.result.thickness
   ansys.dpf.core.operators.result.torque
   ansys.dpf.core.operators.result.total_contact_force
   ansys.dpf.core.operators.result.total_contact_moment
   ansys.dpf.core.operators.result.total_mass
   ansys.dpf.core.operators.result.total_strain
   ansys.dpf.core.operators.result.transient_rayleigh_integration
   ansys.dpf.core.operators.result.velocity
   ansys.dpf.core.operators.result.velocity_X
   ansys.dpf.core.operators.result.velocity_Y
   ansys.dpf.core.operators.result.velocity_Z
   ansys.dpf.core.operators.result.workflow_energy_per_component
   ansys.dpf.core.operators.result.workflow_energy_per_harmonic
   ansys.dpf.core.operators.result.write_cms_rbd_file
   ansys.dpf.core.operators.result.write_motion_dfmf_file
   ansys.dpf.core.operators.result.zone_pressure_spectrum

Module contents
---------------

.. automodule:: ansys.dpf.core.operators.result
   :inherited-members:
